fixing alignment

--- a/css/style.css
+++ b/css/style.css
@@ -574,7 +574,7 @@ ol.tumblr_posts {
 
 .problem-action-result{
     text-align: left;
-    width:244px;
+    width:250px;
     display: inline-block;
     vertical-align: top;
 }
